# rust

api-products/: Cargo.toml
api-products/src/: main.rs
aulas-rust/: Cargo.toml
aulas-rust/src/: bhaskara.rs  main.rs
guessing_game/src/: main.rs
hello_world/src/: main.rs
