[package]
name = "api-products"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = {version = "0.4.38", feature=["serde"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.38.0", features= ["full"]}
uuid = {version = "1.8.0", features = [
    "v4",
    "v7",
    "js",
    "serde",
]}
